--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <!-- Document Content -->
-    <header>Raven Saville</header>
-    <h1>About Me</h1>
+    <h1>Raven Saville</h1>
+    <h2>About Me</h2>
     <p>My name is Raven Saville, I am currently a student at Algonquin College.
         I am in the Interactive Media Design Program, this is my 1<sup>st</sup> year
         and I am enjoying it so far. I chose this program beacuse I believe it will allow me to persue
@@ -20,9 +20,8 @@
         Long-term I have dreams of illustrating a book, creating an app, designing product packaging
         and many more.
     </p>
-    <q>"Shoot for the moon and if you miss, you'll land among the stars."</q>
-    <cite>- Les Brown</cite>
-
+    <blockquote>"Shoot for the moon and if you miss, you'll land among the stars." <cite>- Les Brown</cite></blockquote>
+    
    <footer>No copyright information needed. </footer>
 
   </body>
