--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -11,14 +11,15 @@
     <h2>About Me</h2>
     <p>My name is Raven Saville, I am currently a student at Algonquin College.
         I am in the Interactive Media Design Program, this is my 1<sup>st</sup> year
-        and I am enjoying it so far. I chose this program beacuse I believe it will allow me to persue
-        <em>most</em> of my creative endeavours, pesonally and as a career.
+        and I am enjoying it so far. I chose this program because I believe it will allow me to persue
+        <em>most</em> of my creative endeavours, personally and as a career.
     </p>
     <p>I have <strong>many</strong> creative endeavours and projects that I hope to create one day.
-        Short-term I would like to create my own brand and a the media that goes along with it,
+        Short-term I would like to create my own brand and all the media that goes along with it,
         like the color swatches, logo, website design <abbr title="etcetera">etc.</abbr> 
         Long-term I have dreams of illustrating a book, creating an app, designing product packaging
-        and many more.
+        and many more. Ultimately I want to be an artist in as many ways possible,
+        and I think thats what's great about this field/program in particular.
     </p>
     <blockquote>"Shoot for the moon and if you miss, you'll land among the stars." <cite>- Les Brown</cite></blockquote>
     
