--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -1,29 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Document information -->
-    <meta charset="UTF-8">
-    <title>html.assignment</title>
-  </head>
-  <body>
-    <!-- Document Content -->
-    <h1>Raven Saville</h1>
-    <h2>About Me</h2>
-    <p>My name is Raven Saville, I am currently a student at Algonquin College.
-        I am in the Interactive Media Design Program, this is my 1<sup>st</sup> year
-        and I am enjoying it so far. I chose this program because I believe it will allow me to persue
-        <em>most</em> of my creative endeavours, personally and as a career.
-    </p>
-    <p>I have <strong>many</strong> creative endeavours and projects that I hope to create one day.
-        Short-term I would like to create my own brand and all the media that goes along with it,
-        like the color swatches, logo, website design <abbr title="etcetera">etc.</abbr> 
-        Long-term I have dreams of illustrating a book, creating an app, designing product packaging
-        and many more. Ultimately I want to be an artist in as many ways possible,
-        and I think thats what's great about this field/program in particular.
-    </p>
-    <blockquote>"Shoot for the moon and if you miss, you'll land among the stars." <cite>- Les Brown</cite></blockquote>
-    
-   <footer>No copyright information needed. </footer>
 
-  </body>
+<head>
+  <!-- Document information -->
+  <meta charset="UTF-8">
+  <title>Raven Saville</title>
+</head>
+
+<body>
+  <h1>Index</h1>
+  <article>
+    <h2>About Me</h2>
+  </article>
+  <p>
+    My name is Raven Saville and I am an Interactive and Media Design student at Algonquin College. So far I am enjoying
+    all of my classes, esspecially this one.
+    My hope in completing this program is to build a skill set that will alow me to bring any information to life in a
+    visual way; all of my dream projects
+    revolve around this concept.
+  </p>
+  <h2>Some of My Dream Projects:</h2>
+  <ul>
+    <li>Illustrate a Childrens Book</li>
+    <li>Create/Design an <abbr title="application">app</abbr></li>
+    <li>Animate Something</li>
+    <li>Design Infographics</li>
+    <li>Create my Own Font</li>
+  </ul>
+  <p>
+    There are going to be way more projects added to that list over time and I am excited that I will be able to
+    complete
+    some of these projects in the near future.
+    My parents are going to be <em>so</em> proud when they see that I coded this all by myself! Heck! I'm proud!
+  </p>
+
+  <h2>2 Hobbies of Mine</h2>
+  <dl>
+    <dt>1. Oragami</dt>
+    <dd>The art of paper folding</dd>
+    
+    <dt>2. Playing the Kalimba</dt>
+    <dd>Also known as a "finger piano"</dd>
+  </dl>
+
+
+  <blockquote>I really hope I did this correctly! - <cite>Raven Saville</cite></blockquote>
+
+  <a href="notes.html">notes</a>
+<img src="images/image1.jpg" alt="picture of me" width="500" />
+
+  <footer>By Raven Saville on September 23<sup>rd</sup>, 2021</footer>
+  <!-- Document Content -->
+</body>
+
+
+
+
 </html>
