--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
+<!DOCTYPE html>
 <html>
-    <p>this is my github pages site!</p>
+    <head>
+        <!-- head tag is for info on the site -->
+    </head>
+
+    <style>
+        /* this comment is in CSS */
+        p{
+            background-color: cadetblue;
+        }
+    </style>
+
+    <body>
+        <!-- body is visable to viewer -->
+        <p style="color: blue;">testing out CSS</p>
+    </body>
 </html>
