--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -5,13 +5,19 @@
   <!-- Document information -->
   <meta charset="UTF-8">
   <title>Raven Saville</title>
+  <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
-  <h1>Index</h1>
+  <h1 class="x site-title" >Index</h1>
   <article>
     <h2>About Me</h2>
   </article>
+ <!-- Nav -->
+<ul class="nav">
+  <li><a href="notes.html">notes</a></li>
+  
+</ul>
   <p>
     My name is Raven Saville and I am an Interactive and Media Design student at Algonquin College. So far I am enjoying
     all of my classes, esspecially this one.
@@ -34,26 +40,28 @@
     My parents are going to be <em>so</em> proud when they see that I coded this all by myself! Heck! I'm proud!
   </p>
 
-  <h2>2 Hobbies of Mine</h2>
-  <dl>
-    <dt>1. Oragami</dt>
-    <dd>The art of paper folding</dd>
-    
-    <dt>2. Playing the Kalimba</dt>
-    <dd>Also known as a "finger piano"</dd>
-  </dl>
+  <h2>Hobbies of Mine:</h2>
+
+  <ul class="a">
+    <li>Oragami</li>
+    <li>Music</li>
+    <li>Photography</li>
+    <li>Yoga</li>
+    <li>Dance</li>
+    <li>Sleeping</li>
+  </ul>
+  
+
 
 
   <blockquote>I really hope I did this correctly! - <cite>Raven Saville</cite></blockquote>
 
-  <a href="notes.html">notes</a>
-<img src="images/image1.jpg" alt="picture of me" width="500" />
+ 
 
-  <footer>By Raven Saville on September 23<sup>rd</sup>, 2021</footer>
+<img id="my-image" src="images/image1.jpg" alt="picture of me" width="500" />
+
+  <footer class="x">By Raven Saville on September 23<sup>rd</sup>, 2021</footer>
   <!-- Document Content -->
 </body>
-
-
-
 
 </html>
