--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -5,9 +5,12 @@
   <!-- Document information -->
   <meta charset="UTF-8">
   <title>Notes</title>
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-    <h1>5 HTML Tags I've Learned so Far:</h1>
+  <a href="index.html">index</a>
+    <h1>Notes</h1>
+    <h2>HTML Tags</h2>
     <dl>
         <dt> < p > </dt>
         <dd>This is a paragraph tag</dd>
@@ -20,7 +23,5 @@
         <dt> < em > </dt>
         <dd> This is an emphasis tag</dd>
     </dl>
-
-    <a  href="index.html">index</a>
 </body>
 </html>
