--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -5,18 +5,22 @@
   <!-- Document information -->
   <meta charset="UTF-8">
   <title>Raven Saville</title>
-  <link href="css/main.css" rel="stylesheet">
 </head>
+
+<nav>
+  <link href="css/main.css" rel="stylesheet">
+</nav>
 
 <body>
   <h1 class="x site-title" >Index</h1>
+  
   <article>
     <h2>About Me</h2>
   </article>
  <!-- Nav -->
 <ul class="nav">
   <li><a href="notes.html">notes</a></li>
-  
+
 </ul>
   <p>
     My name is Raven Saville and I am an Interactive and Media Design student at Algonquin College. So far I am enjoying
