--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -12,15 +12,15 @@
     <h1>Notes</h1>
     <h2>HTML Tags</h2>
     <dl>
-        <dt> < p > </dt>
+        <dt> &ltp&gt </dt>
         <dd>This is a paragraph tag</dd>
-        <dt> < h1 > </dt>
+        <dt> &lth1&gt </dt>
         <dd>This is a H1 header tag</dd>
-        <dt> < ul > </dt>
+        <dt> &ltul&gt </dt>
         <dd>This is an unordered list tag</dd>
-        <dt> < div > </dt>
+        <dt> &ltdiv&gt </dt>
         <dd> This is a container tag</dd>
-        <dt> < em > </dt>
+        <dt> &ltem&gt </dt>
         <dd> This is an emphasis tag</dd>
     </dl>
 </body>
