--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -7,8 +7,13 @@
   <title>Notes</title>
   <link href="css/main.css" rel="stylesheet">
 </head>
+
 <body>
-  <a href="index.html">index</a>
+
+  <nav>
+    <a href="index.html">index</a>
+  </nav>
+  
     <h1>Notes</h1>
     <h2>HTML Tags</h2>
     <dl>
