Final Touch Ups

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -14,12 +14,13 @@
     <link href="css/main.css" rel="stylesheet">
     <a href="notes.html">notes</a>
   </nav>
+
+<header>
+  <h1 class="site-title" >Index</h1>
+</header>
   
-  <h1 class="x site-title" >Index</h1>
-  
-  <article>
-    <h2>About Me</h2>
-  </article>
+    <h1>About Me</h1>
+ 
 
   <p>
     My name is Raven Saville and I am an Interactive and Media Design student at Algonquin College. So far I am enjoying
@@ -63,7 +64,7 @@
 
 <img id="my-image" src="images/image1.jpg" alt="picture of me" width="500" />
 
-  <footer class="x">By Raven Saville on September 23<sup>rd</sup>, 2021</footer>
+  <footer>By Raven Saville on September 23<sup>rd</sup>, 2021</footer>
   <!-- Document Content -->
 </body>
 
