--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -7,14 +7,16 @@
   <title>Notes</title>
   <link href="css/main.css" rel="stylesheet">
 </head>
-
-<body>
-
-  <nav>
+ <nav>
     <a href="index.html">index</a>
   </nav>
   
-    <h1>Notes</h1>
+<header>
+  <h1>Notes</h1>
+</header>
+
+<body>
+    
     <h2>HTML Tags</h2>
     <dl>
         <dt> &ltp&gt </dt>
