--- a/midterm/index.html
+++ b/midterm/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lone Starfish</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -21,7 +20,7 @@
     </ul>
    </div>
   <!-- Main Content -->
-<div>
+<div class="main-content">
     <article>
         <h1>Life of a Starfish</h1>
         <img src="images/lone-starfish.jpg" alt="starfish" width= 25%>
@@ -67,10 +66,11 @@
     
     </form>
     </section>
-</div>
-<footer>
-    <p>&copy; Lone Starfish.</p> 
-</footer>
 
+    <!-- footer -->
+    <footer>
+        <p>&copy; Lone Starfish.</p> 
+    </footer>
+</div>
 </body>
 </html>
