--- a/midterm/index.html
+++ b/midterm/index.html
@@ -2,41 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lone Starfish</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- Header -->
-   <header class="banner">
-       <img src="images/lone-starfish-wide.jpg" alt="starfish" width="75%">
-       <div class="main-title">Lone Starfish</div>
+   <header>
+       <div class="banner">
+            <img src="images/lone-starfish-wide.jpg" alt="starfish" width="100%">
+            <div class="main-title">Lone Starfish</div>
+       </div>
    </header>
    <!-- Navigation -->
-   <div>
-    <ul class="navbar">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Story</a></li>
-        <li><a href="#">Contact</a></li>
-    </ul>
-   </div>
+   <div class="navbar">
+    <a class="home" href="#">Home</a>
+    <a class="story" href="#">Story</a>
+    <a class="contact" href="#">Contact</a>
+  </div>
   <!-- Main Content -->
 <div class="main-content">
-    <article>
+
+    <div class="life-of-startfish" >
+        <article>
         <h1>Life of a Starfish</h1>
-        <img src="images/lone-starfish.jpg" alt="starfish" width= 25%>
+        <img class="square-image" src="images/lone-starfish.jpg" alt="starfish" width=25%>
         <p>Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish. Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish. Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.  
         </p>
-    </article>
+        </article>
+    </div>
 
-    <article>
-    <h2>Facts About Starfish</h2>
-    <ul>
-        <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. </li>
-        <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
-        <li>Herring barbel Mexican golden trout, killifish bonito; northern anchovy. </li>
-        <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
-    </ul>
-    </article> 
+    <div>
+
+        <article>
+        <h2>Facts About Starfish</h2>
+        <ul>
+            <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. </li>
+            <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
+            <li>Herring barbel Mexican golden trout, killifish bonito; northern anchovy. </li>
+            <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
+        </ul>
+        </article> 
+    </div>
+    
     <section class="contact-section">
     <h3>Contact to learn more</h3>
     <form action="">
