--- a/midterm/index.html
+++ b/midterm/index.html
@@ -36,7 +36,7 @@
 
         <article>
         <h2>Facts About Starfish</h2>
-        <ul>
+        <ul class="facts">
             <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. </li>
             <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
             <li>Herring barbel Mexican golden trout, killifish bonito; northern anchovy. </li>
@@ -44,9 +44,9 @@
         </ul>
         </article> 
     </div>
+     <h2>Contact to learn more</h2>
     
-    <section class="contact-section">
-    <h3>Contact to learn more</h3>
+     <section class="contact-section" >
     <form action="">
         <label for="name">Your Name</label>
         <input type="text" id="name" name="name">
@@ -70,6 +70,7 @@
             <input type="radio" name="radio">
             <span class="checkmark"></span>
           </label>
+
           <button type="button">SEND</button>
     
     </form>
