--- a/final-project/index.html
+++ b/final-project/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/icons.css">
-    <link rel="stylesheet" href="/styles/css.css">
+<!--     <link rel="stylesheet" href="/styles/css.css"> -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
         </style>
